* Added support for searching markers (searchmarkers=all/title) in Google Maps and OpenLayers
* Added support for creating static maps in OpenLayers and GoogleMaps (static=on)
* Added positional parameter to show polygons only on hover.
* Added an optional link parameter as an alternative to popup bubble with text and title


; Other improvements

* Merged display_map and display_point(s) into a single parser function: display_map (display_points is now an alias).
* Updates parameter definitions from Validator 0.4.x to Validator 0.5.x.
* Improved script loading.

; Bug fixes

* Fixed JavaScript error on some special pages due to incorrect order of map initialization.
* Fixed broken kml functionality

=== Maps 1.0.5 ===
(2011-11-30)

* Fixed display of attribution control for OpenLayers.
* Fixed to big precision of geographic coordinates in decimal minutes format (bug 32407).

=== Maps 1.0.4 ===
(2011-10-15)

* Updated OpenLayers from 2.10 to 2.11.
* Fixed bug in adding adittional markers for Google Maps v3 (mainly affecting the Semantic Maps form input).

=== Maps 1.0.3 ===
(2011-09-14)

* Added API module for geocoding.
* Added 'geocoding' right.
* Added kmlrezoom parameter for Google Maps v3 and general $egMapsRezoomForKML setting.
* Fixed Google Maps v3 JavaScript issue occuring on MediaWiki 1.17.

=== Maps 1.0.2 ===
(2011-08-24)

* Fixed Google Maps v3 JavaScript issue occuring when using Google Earth on unsupported systems.
* Fixed internationalization of distances (bug 30467).

=== Maps 1.0.1 ===
(2011-08-17)

* Added language parameter to the mapsdoc hook.

* Use of Validator 0.4.10s setMessage method instead of setDescription for better i18n.

* Fixed zoom and types parameters for Google Maps v3.

* Minor improvement to script loading.

* Added support for Google Earth in Google Maps v3.

* Added tilt parameter for Google Earth in Google Maps v3.

=== Maps 1.0 ===
(2011-07-19)

This version branched from Maps 0.7.x at version 0.7.3.

==== New features ====
